styled buttons and fixed scroll bar on safari

--- a/style.css
+++ b/style.css
@@ -63,9 +63,55 @@ body {
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   padding: 10px;
+  margin-top: 15px;
+}
+
+button {
+  min-height: 50px;
+  font-size: 20px;
+  font-weight: 100;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(199, 199, 199);
+}
+
+button:hover {
+  filter: brightness(110%);
+}
+
+button:active {
+  transform: translateY(1px);
+}
+
+button:focus {
+  outline: none;
+}
+
+.operator {
+  background: grey;
+  color: white;
+  font-size: 30px;
+}
+
+.clear {
+  background: rgb(255, 40, 40);
+  color: white;
+}
+
+.clear:hover {
+  filter: brightness(85%);
 }
 
 .equal-sign {
   grid-column: -2;
   grid-row: 2 / span 4;
+  background: rgb(13, 206, 87);
+}
+
+/* Media Query: Large Smartphone (Veritcal) */
+@media screen and (max-width: 600px) {
+  .calculator {
+    width: 95%;
+  }
 }
